// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_AGENT_ERROR createAgent Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_AGENT_ERROR",
  },
]
`;

exports[`GET_AGENT_ERROR getAgent Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_AGENT_ERROR",
  },
]
`;

exports[`GET_AGENT_SUCCESS createAgent Empty params 1`] = `Array []`;

exports[`GET_AGENT_SUCCESS createAgent Receives a agent 2`] = `
Array [
  Object {
    "agent": Object {
      "configuration": Object {
        "bar": "2",
        "baz": "c",
        "foo": "false",
      },
      "created_at": "2021-02-25T17:31:33.826Z",
      "deleted_at": null,
      "description": "Detects the presense of an emoji character in your text",
      "endpoint": "ws://emoji-analysis-production.herokuapp.com",
      "id": 1,
      "interaction": Object {
        "created_at": "2021-02-25T15:09:05.001302-05:00",
        "deleted_at": null,
        "id": 18,
        "name": "ChatPrompt",
        "updated_at": null,
      },
      "is_active": true,
      "name": "Fake Agent",
      "owner": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "superuser",
      },
      "self": Object {
        "email": null,
        "id": 148,
        "is_anonymous": true,
        "is_super": false,
        "lastseen_at": "2021-02-25T13:08:57.323-05:00",
        "personalname": "Emoji Analysis",
        "roles": null,
        "single_use_password": false,
        "username": "ebe565050b31cbb4e7eacc39b23e2167",
      },
      "updated_at": "2021-02-25T20:09:04.999Z",
    },
    "type": "GET_AGENT_SUCCESS",
  },
]
`;

exports[`GET_AGENT_SUCCESS getAgent Receives a agent 2`] = `
Array [
  Object {
    "agent": Object {
      "configuration": Object {
        "bar": "2",
        "baz": "c",
        "foo": "false",
      },
      "created_at": "2021-02-25T17:31:33.826Z",
      "deleted_at": null,
      "description": "Detects the presense of an emoji character in your text",
      "endpoint": "ws://emoji-analysis-production.herokuapp.com",
      "id": 1,
      "interaction": Object {
        "created_at": "2021-02-25T15:09:05.001302-05:00",
        "deleted_at": null,
        "id": 18,
        "name": "ChatPrompt",
        "updated_at": null,
      },
      "is_active": true,
      "name": "Fake Agent",
      "owner": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "superuser",
      },
      "self": Object {
        "email": null,
        "id": 148,
        "is_anonymous": true,
        "is_super": false,
        "lastseen_at": "2021-02-25T13:08:57.323-05:00",
        "personalname": "Emoji Analysis",
        "roles": null,
        "single_use_password": false,
        "username": "ebe565050b31cbb4e7eacc39b23e2167",
      },
      "updated_at": "2021-02-25T20:09:04.999Z",
    },
    "type": "GET_AGENT_SUCCESS",
  },
]
`;

exports[`GET_AGENTS_ERROR getAgents Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_AGENTS_ERROR",
  },
]
`;

exports[`GET_AGENTS_SUCCESS getAgents Receives agents 2`] = `
Array [
  Object {
    "agents": Array [
      Object {
        "configuration": Object {
          "bar": "2",
          "baz": "c",
          "foo": "false",
        },
        "created_at": "2021-02-25T17:31:33.826Z",
        "deleted_at": null,
        "description": "Detects the presense of an emoji character in your text",
        "endpoint": "ws://emoji-analysis-production.herokuapp.com",
        "id": 1,
        "interaction": Object {
          "created_at": "2021-02-25T15:09:05.001302-05:00",
          "deleted_at": null,
          "id": 18,
          "name": "ChatPrompt",
          "updated_at": null,
        },
        "is_active": true,
        "name": "Emoji Analysis",
        "owner": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "superuser",
        },
        "self": Object {
          "email": null,
          "id": 148,
          "is_anonymous": true,
          "is_super": false,
          "lastseen_at": "2021-02-25T13:08:57.323-05:00",
          "personalname": "Emoji Analysis",
          "roles": null,
          "single_use_password": false,
          "username": "ebe565050b31cbb4e7eacc39b23e2167",
        },
        "updated_at": "2021-02-25T20:09:04.999Z",
      },
    ],
    "type": "GET_AGENTS_SUCCESS",
  },
]
`;

exports[`GET_AGENTS_SUCCESS getAgents Receives undefined 3`] = `
Array [
  Object {
    "agents": Array [],
    "type": "GET_AGENTS_SUCCESS",
  },
]
`;

exports[`GET_AGENTS_SUCCESS getAgents, filtered Receives agents 2`] = `
Array [
  Object {
    "agents": Array [
      Object {
        "configuration": Object {
          "bar": "2",
          "baz": "c",
          "foo": "false",
        },
        "created_at": "2021-02-25T17:31:33.826Z",
        "deleted_at": null,
        "description": "Detects the presense of an emoji character in your text",
        "endpoint": "ws://emoji-analysis-production.herokuapp.com",
        "id": 1,
        "interaction": Object {
          "created_at": "2021-02-25T15:09:05.001302-05:00",
          "deleted_at": null,
          "id": 18,
          "name": "ChatPrompt",
          "updated_at": null,
        },
        "is_active": true,
        "name": "Emoji Analysis",
        "owner": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "superuser",
        },
        "self": Object {
          "email": null,
          "id": 148,
          "is_anonymous": true,
          "is_super": false,
          "lastseen_at": "2021-02-25T13:08:57.323-05:00",
          "personalname": "Emoji Analysis",
          "roles": null,
          "single_use_password": false,
          "username": "ebe565050b31cbb4e7eacc39b23e2167",
        },
        "updated_at": "2021-02-25T20:09:04.999Z",
      },
    ],
    "type": "GET_AGENTS_SUCCESS",
  },
]
`;

exports[`GET_AGENTS_SUCCESS getAgents, filtered Receives undefined 3`] = `
Array [
  Object {
    "agents": Array [],
    "type": "GET_AGENTS_SUCCESS",
  },
]
`;

exports[`SET_AGENT_ERROR setAgent Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_AGENT_ERROR",
  },
]
`;

exports[`SET_AGENT_SUCCESS setAgent Empty params 1`] = `Array []`;

exports[`SET_AGENT_SUCCESS setAgent Receives a agent 2`] = `
Array [
  Object {
    "agent": Object {
      "configuration": Object {
        "bar": "2",
        "baz": "c",
        "foo": "false",
      },
      "created_at": "2021-02-25T17:31:33.826Z",
      "deleted_at": null,
      "description": "Detects the presense of an emoji character in your text",
      "endpoint": "ws://emoji-analysis-production.herokuapp.com",
      "id": 1,
      "interaction": Object {
        "created_at": "2021-02-25T15:09:05.001302-05:00",
        "deleted_at": null,
        "id": 18,
        "name": "ChatPrompt",
        "updated_at": null,
      },
      "is_active": true,
      "name": "Fake Agent",
      "owner": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "superuser",
      },
      "self": Object {
        "email": null,
        "id": 148,
        "is_anonymous": true,
        "is_super": false,
        "lastseen_at": "2021-02-25T13:08:57.323-05:00",
        "personalname": "Emoji Analysis",
        "roles": null,
        "single_use_password": false,
        "username": "ebe565050b31cbb4e7eacc39b23e2167",
      },
      "updated_at": "2021-02-25T20:09:04.999Z",
    },
    "type": "SET_AGENT_SUCCESS",
  },
]
`;

exports[`SET_AGENT_SUCCESS setAgent Receives a agent, updates scenario 2`] = `
Array [
  Object {
    "agent": Object {
      "configuration": Object {
        "bar": "2",
        "baz": "c",
        "foo": "false",
      },
      "created_at": "2021-02-25T17:31:33.826Z",
      "deleted_at": null,
      "description": "Detects the presense of an emoji character in your text",
      "endpoint": "ws://emoji-analysis-production.herokuapp.com",
      "id": 1,
      "interaction": Object {
        "created_at": "2021-02-25T15:09:05.001302-05:00",
        "deleted_at": null,
        "id": 18,
        "name": "ChatPrompt",
        "updated_at": null,
      },
      "is_active": true,
      "name": "Fake Agent",
      "owner": Object {
        "email": "super@email.com",
        "id": 999,
        "is_anonymous": false,
        "is_super": true,
        "personalname": "Super User",
        "roles": Array [
          "participant",
          "super_admin",
          "facilitator",
          "researcher",
        ],
        "username": "superuser",
      },
      "self": Object {
        "email": null,
        "id": 148,
        "is_anonymous": true,
        "is_super": false,
        "lastseen_at": "2021-02-25T13:08:57.323-05:00",
        "personalname": "Emoji Analysis",
        "roles": null,
        "single_use_password": false,
        "username": "ebe565050b31cbb4e7eacc39b23e2167",
      },
      "updated_at": "2021-02-25T20:09:04.999Z",
    },
    "type": "SET_AGENT_SUCCESS",
  },
]
`;
